# ndp-mutter

./: Cargo.toml  Makefile  README.md  quickstart.sh
crates/ndp-common/: Cargo.toml
crates/ndp-common/src/: lib.rs
crates/ndp-control/: Cargo.toml
crates/ndp-control/src/: lib.rs
crates/ndp-discovery/: Cargo.toml
crates/ndp-discovery/src/: lib.rs
crates/ndp-provider-mutter/: Cargo.toml
crates/ndp-provider-mutter/src/: dbus_client.rs  main.rs
crates/ndp-sink/: Cargo.toml
crates/ndp-sink/src/: main.rs
crates/ndp-uinput-helper/: Cargo.toml
crates/ndp-uinput-helper/src/: main.rs
docs/: 01-architecture.md  02-acceptance-tests.md  03-mutter-dbus.md  04-pipewire.md  05-media-pipelines.md  06-input-phase2.md  07-troubleshooting.md
flatpak/: build.sh  com.github.ndp_mutter.Provider.yml  com.github.ndp_mutter.Sink.yml
tools/ndp-inspect/: Cargo.toml
tools/ndp-inspect/src/: main.rs
