[package]
name = "ndp-provider-mutter"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.21"
gstreamer-app = "0.21"
zbus = "3.14"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
ndp-common = { path = "../ndp-common" }
anyhow = "1.0"
futures = "0.3"